Fix spacing to center user dashboard message

--- a/src/css/partials/_styles.scss
+++ b/src/css/partials/_styles.scss
@@ -19,7 +19,7 @@ header {
 }
 
 
-.user-sign-in {
+.user-sign-in, h4 {
   text-align: center;
   width: fit-content;
   margin: auto;
